This revision primarily cleans up the formatting of the code base and changes the class name DocumentRegion to StaticDocumentRegion.
The following classes were modified (at least syntactically):

	modified:   .gitignore
	modified:   drjava/build.xml
	modified:   drjava/src/edu/rice/cs/drjava/CommandLineTest.java
	modified:   drjava/src/edu/rice/cs/drjava/ConfigFileTest.java
	modified:   drjava/src/edu/rice/cs/drjava/DrJava.java
	modified:   drjava/src/edu/rice/cs/drjava/DrJavaRestart.java
	modified:   drjava/src/edu/rice/cs/drjava/DrJavaRoot.java
	modified:   drjava/src/edu/rice/cs/drjava/DrJavaTestCase.java
	modified:   drjava/src/edu/rice/cs/drjava/RemoteControlClient.java
	modified:   drjava/src/edu/rice/cs/drjava/RemoteControlServer.java
	modified:   drjava/src/edu/rice/cs/drjava/config/BinaryOpProperty.java
	modified:   drjava/src/edu/rice/cs/drjava/config/BooleanOption.java
	modified:   drjava/src/edu/rice/cs/drjava/config/BooleanOptionTest.java
	modified:   drjava/src/edu/rice/cs/drjava/config/ColorOption.java
	modified:   drjava/src/edu/rice/cs/drjava/config/ConfigOptionListeners.java
	modified:   drjava/src/edu/rice/cs/drjava/config/ConfigProperty.java
	modified:   drjava/src/edu/rice/cs/drjava/config/Configuration.java
	modified:   drjava/src/edu/rice/cs/drjava/config/ConstantProperty.java
	modified:   drjava/src/edu/rice/cs/drjava/config/DrJavaActionProperty.java
	modified:   drjava/src/edu/rice/cs/drjava/config/DrJavaProperty.java
	modified:   drjava/src/edu/rice/cs/drjava/config/DrJavaPropertySetupTest.java
	modified:   drjava/src/edu/rice/cs/drjava/config/EagerProperty.java
	modified:   drjava/src/edu/rice/cs/drjava/config/FileConfiguration.java
	modified:   drjava/src/edu/rice/cs/drjava/config/FileListProperty.java
	modified:   drjava/src/edu/rice/cs/drjava/config/FileOption.java
	modified:   drjava/src/edu/rice/cs/drjava/config/FileProperty.java
	modified:   drjava/src/edu/rice/cs/drjava/config/FontOption.java
	modified:   drjava/src/edu/rice/cs/drja